removed files for github pages.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script src="assets/webpack_sample.js"></script>
+  <script src="./dist/webpack_sample.js"></script>
 </head>
 <body>
   <button class="btn" id="btn">click me</button>
